segundo trabajo terminado

--- a/2/2c - bot_tfidf_nltk.ipynb
+++ b/2/2c - bot_tfidf_nltk.ipynb
@@ -1090,6 +1090,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#El bot usado puede tener mayor utilidad y beneficio cuanto se compacta la\n",
+    "#información importante en un solo parrafo, realizando distintas pruebas con textos\n",
+    "#se pudo evidenciar que cuando el texto da un idea general y bastante extensa de un \n",
+    "#tema no genera una buena similitud con el texto ingresado por el usuario. \n",
+    "#Generando parrafos especificos a ciertas preguntas puede ser de gran utilidad en \n",
+    "#Frecuently asked questions."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
